@@ -131,9 +131,10 @@ R o Take out the '5 second' timeout from the socks detach schedule.
   - Critical but minor bugs, backport candidates.
     - support dir 503s better
       o clients don't log as loudly when they receive them
-N     - they don't count toward the 3-strikes rule
-        - should there be some threshold of 503's after which we give up?
-        - Delay when we get a lot of 503s?
+      o they don't count toward the 3-strikes rule
+        D But eventually, we give up after getting a lot of 503s.
+N       - Delay when we get a lot of 503s, rather than punting onto the
+          servers that have given us 503s?
       o split "router is down" from "dirport shouldn't be tried for a while"?
         We want a field to hold "when did we last get a 503 from this
         directory server."  Probably, it should go in local_routerstatus_t,
